syntax = "proto3";
// ประกาศ gRPC service และเพิ่ม RPC definition ของ API ใน file นี้
package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/chanon2000/simplebank/pb";

service SimpleBank { // service ชื่อ SimpleBank
    // rpc ชื่อ CreateUser ซึ่งเป็นประเภท Unary gRPC
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}
